Overflow-X fixed

--- a/src/Resources/SASS/main.scss
+++ b/src/Resources/SASS/main.scss
@@ -13,6 +13,7 @@ main,
 .conversation {
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .message-item {
